--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<body lang="en">
 		<header>
-			<h1>Neo New Card maker</h1>
+			<h1>SCARDS</h1>
 		</header>
 		<article class="content">
 			<div id="react-root" class="js-yes">
@@ -42,10 +42,6 @@
 				JavaScript seems to be unavailable.
 			</div>
 		</article>
-		<footer>
-			<a href="https://neocardmaker.com/index.php">NCM Forum</a> |
-			<a href="https://forum.yugiohcardmaker.net/topic/372510-neo-new-card-maker-110/">YCM Forum</a>
-		</footer>
 		<script src="https://unpkg.com/react@16/umd/react.production.min"></script>
 		<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min"></script>
 		<script src="https://unpkg.com/create-react-class@15.6.3/create-react-class.min"></script>
