--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title>Neo New card maker</title>
+		<title>SCARDS</title>
 		<link rel="stylesheet" type="text/css" href="./css/Style.css" />
 		<link rel="stylesheet" type="text/css" href="./css/Default-Theme.css" />
 
